--- a/src/components/FabianBarua.astro
+++ b/src/components/FabianBarua.astro
@@ -1,10 +1,9 @@
 ---
 const technologies = ["Astro", "React", "TailwindCSS"];
-import { motion } from "framer-motion";
 ---
 
-<motion.article
-  className="font-mono border border-default-200 mt-8 relative flex p-2 rounded-2xl bg-default-100/50 shadow-xl"
+<article
+  class="font-mono py-7 border border-default-200 mt-8 relative flex p-2 rounded-2xl bg-default-100/50 shadow-xl"
 >
   <p class="text-sm w-full text-end absolute top-2 right-3 text-default-400">
     Abril 16, 2024
@@ -29,7 +28,7 @@ import { motion } from "framer-motion";
       }
     </div>
   </header>
-</motion.article>
+</article>
 
 <style>
   .half-circle {
