--- a/src/components/HomeSection.astro
+++ b/src/components/HomeSection.astro
@@ -16,7 +16,7 @@ import { ImageHome } from "./ImageHome";
     </h2>
     <FabianBarua />
   </div>
-  <div class="h-96 sm:h-72">
+  <div class="h-96 sm:h-72 mb-8 sm:mb-0">
     <ImageHome client:only="react" />
   </div>
 </section>
