--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,7 +5,8 @@ import Heart from "../components/Icons/Heart.astro";
 import Logo from "../components/Icons/Logo.astro";
 import ThemeSwitch from "@components/ThemeSwitch.astro";
 import "./global.css";
-import "@fontsource/inter";
+import ArrowUp from "@/components/Icons/ArrowUp.astro";
+import DevIcon from "@/components/Icons/DevIcon.astro";
 
 interface Props {
   title: string;
@@ -15,7 +16,11 @@ const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html class="transition-colors duration-300" data-theme="dark" lang="en">
+<html
+  class="transition-colors duration-300 scroll-smooth scrollbar-hide"
+  data-theme="dark"
+  lang="en"
+>
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="Astro description" />
@@ -25,7 +30,10 @@ const { title } = Astro.props;
     <title>{title}</title>
     <ViewTransitions />
   </head>
-  <body class="transition-colors duration-300 bg-background min-h-dvh">
+  <body
+    id="home"
+    class="transition-colors duration-300 bg-background min-h-dvh flex flex-col"
+  >
     <header
       class="sm:max-w-xl lg:max-w-5xl mx-auto h-36 w-full flex sm:flex-row flex-col sm:items-end sm:justify-between justify-end gap-6 mt-9 sm:mt-0 sm:gap-0 items-center pb-4"
     >
@@ -39,18 +47,32 @@ const { title } = Astro.props;
         <ThemeSwitch />
       </nav>
     </header>
-    <slot />
+    <main class="flex-1">
+      <slot />
+    </main>
     <footer
-      class="sm:max-w-xl lg:max-w-5xl gap-2 flex flex-col text-default-400 mx-auto"
+      transition:name="footer"
+      class="sm:max-w-xl w-full py-12 lg:max-w-5xl gap-2 flex flex-col text-default-400 mx-auto"
     >
       <div class="flex justify-between">
         <Logo class="h-16 sm:h-12 w-auto fill-rickBlue" />
-        <p>Volver arriba</p>
+        <a
+          class="flex group text-nowrap h-6 gap-2 hover:-translate-y-1 transition-all"
+          href="#home"
+          >Volver arriba
+
+          <ArrowUp />
+        </a>
       </div>
       <hr class="text-foreground-100" />
       <div class="flex justify-between">
         <p>© 2024 Rick and Morty</p>
-        <p>Desarrollado por <span class="text-rickBlue">Fabian Barua</span></p>
+        <p class="flex gap-2">
+          Desarrollado por
+          <span class="text-rickBlue flex justify-center items-center gap-2"
+            >Fabian Barua <DevIcon />
+          </span>
+        </p>
       </div>
     </footer>
   </body>
