--- a/src/components/ButtonAction.astro
+++ b/src/components/ButtonAction.astro
@@ -2,6 +2,7 @@
 type Props = {
   href?: string;
   textColor?: "blue" | "default";
+  size?: "sm" | "md" | "lg";
 };
 
 const ALL_TEXT_COLORS = {
@@ -9,12 +10,18 @@ const ALL_TEXT_COLORS = {
   default: "text-default-900",
 };
 
+const ALL_SIZES = {
+  sm: "h-7 p-1 text-sm",
+  md: "h-9 p-2 text-base",
+  lg: "h-11 p-3 text-lg",
+};
+
 //icon is an Astro component
-const { href, textColor }: Props = Astro.props;
+const { href, textColor, size }: Props = Astro.props;
 
 const ButtonColor = ALL_TEXT_COLORS[textColor] || ALL_TEXT_COLORS.default;
 
-const buttonClass = `transition-all ${ButtonColor} hover:text-default-900 h-9 p-2 text-base flex justify-center items-center gap-2 bg-default-100 hover:bg-rickBlue rounded-full`;
+const buttonClass = `transition-all ${ButtonColor} hover:text-default-900 ${ALL_SIZES[size] || "h-9 p-2 text-base"} flex justify-center items-center gap-2 bg-default-100 hover:bg-rickBlue rounded-full`;
 
 // si existe href retornar un a, si no un button
 ---
