--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,7 +27,7 @@ const { title } = Astro.props;
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
-    <title>{title}</title>
+    <title>{title || "Rick and Morty 🧪"}</title>
     <ViewTransitions />
   </head>
   <body
@@ -52,10 +52,10 @@ const { title } = Astro.props;
     </main>
     <footer
       transition:name="footer"
-      class="sm:max-w-xl w-full py-12 lg:max-w-5xl gap-2 flex flex-col text-default-400 mx-auto"
+      class="sm:max-w-xl px-2 w-full py-12 lg:max-w-5xl gap-2 flex flex-col text-default-400 mx-auto"
     >
-      <div class="flex justify-between">
-        <Logo class="h-16 sm:h-12 w-auto fill-rickBlue" />
+      <div class="flex justify-between items-center">
+        <Logo class="h-12 w-auto fill-rickBlue" />
         <a
           class="flex group text-nowrap h-6 gap-2 hover:-translate-y-1 transition-all"
           href="#home"
@@ -65,7 +65,9 @@ const { title } = Astro.props;
         </a>
       </div>
       <hr class="text-foreground-100" />
-      <div class="flex justify-between">
+      <div
+        class="flex flex-col-reverse sm:flex-row items-center justify-between"
+      >
         <p>© 2024 Rick and Morty</p>
         <p class="flex gap-2">
           Desarrollado por
