--- a/src/components/ButtonAction.astro
+++ b/src/components/ButtonAction.astro
@@ -21,7 +21,7 @@ const { href, textColor, size }: Props = Astro.props;
 
 const ButtonColor = ALL_TEXT_COLORS[textColor] || ALL_TEXT_COLORS.default;
 
-const buttonClass = `transition-all ${ButtonColor} hover:text-default-900 ${ALL_SIZES[size] || "h-9 p-2 text-base"} flex justify-center items-center gap-2 bg-default-100 hover:bg-rickBlue rounded-full`;
+const buttonClass = `transition-all ${ButtonColor} text-nowrap hover:text-default-900 ${ALL_SIZES[size] || "h-9 p-2 text-base"} flex justify-center items-center gap-2 bg-default-100 hover:bg-rickBlue rounded-full`;
 
 // si existe href retornar un a, si no un button
 ---
