--- a/src/pages/personajes/[id].astro
+++ b/src/pages/personajes/[id].astro
@@ -17,7 +17,11 @@ const episodesIds = character?.episode?.map((episode) => {
   return episodeId;
 });
 
-const episodes = await getEpisode({ id: episodesIds });
+let episodes = await getEpisode({ id: episodesIds });
+
+if (!Array.isArray(episodes)) {
+  episodes = [episodes];
+}
 ---
 
 <Layout title={character.name}>
@@ -25,7 +29,7 @@ const episodes = await getEpisode({ id: episodesIds });
     class="sm:max-w-xl lg:max-w-5xl mx-auto h-full mb-12 overflow-hidden sm:overflow-visible px-6 sm:px-0"
   >
     <div
-      class="w-full flex mx-auto bg-default-50 mt-24 rounded-2xl px-12 py-8 border border-default-300"
+      class="w-full flex-col-reverse sm:flex-row gap-9 sm:gap-9 justify-center sm:items-center flex mx-auto bg-default-50 mt-24 rounded-2xl px-5 sm:px-12 py-8 border border-default-300"
     >
       <div class="flex-1">
         <h1 class="text-3xl mb-2 font-bold">{character.name}</h1>
@@ -35,10 +39,13 @@ const episodes = await getEpisode({ id: episodesIds });
         <p class="font-bold text-md text-default-500">
           Especie: <span class="font-normal">{character.species}</span>
         </p>
+        <p class="font-bold text-md text-default-500">
+          Origen: <span class="font-normal">{character.origin}</span>
+        </p>
         <div
-          class="flex mt-4 pt-6 border-t border-default-400 w-min gap-7 font-semibold text-sm"
+          class="flex flex-wrap sm:flex-nowrap justify-center mx-auto sm:mx-0 mt-8 sm:mt-4 pt-6 border-t border-default-400 sm:w-min gap-7 font-semibold text-sm"
         >
-          <div class="text-center">
+          <div class="text-center bgrb">
             <p class="text-5xl w-24 font-bold">
               {character?.episode?.length || 0}
             </p>
@@ -66,7 +73,7 @@ const episodes = await getEpisode({ id: episodesIds });
           </div>
         </div>
       </div>
-      <div class="size-52 relative">
+      <div class="size-52 mx-auto sm:mx-0 relative">
         <img
           class="w-full h-full object-cover rounded-2xl"
           style={{
@@ -75,13 +82,17 @@ const episodes = await getEpisode({ id: episodesIds });
           src={character.image}
           alt={character.name}
         />
-        <a
-          href={`/lugares/${character.location.id}`}
-          class="left-1/2 flex gap-2 py-1 border border-default-200 hover:bg-default-200 transition-all -translate-x-1/2 px-4 bg-default-100 rounded-full absolute w-min text-nowrap -bottom-3 text-center"
-        >
-          <MoreIcon />
-          Donde estoy?
-        </a>
+        {
+          character.location.id && (
+            <a
+              href={`/lugares/${character.location.id}`}
+              class="left-1/2 flex gap-2 py-1 border border-default-200 hover:bg-default-200 transition-all -translate-x-1/2 px-4 bg-default-100 rounded-full absolute w-min text-nowrap -bottom-3 text-center"
+            >
+              <MoreIcon />
+              Donde estoy?
+            </a>
+          )
+        }
       </div>
     </div>
     {/* section bottom */}
@@ -100,7 +111,7 @@ const episodes = await getEpisode({ id: episodesIds });
       <hr class="my-5 text-foreground-100" />
       {
         episodes.length > 0 ? (
-          <div class=" h-[35rem] mask overflow-auto scrollbar-hide pb-16">
+          <div class=" max-h-[35rem] mask overflow-auto scrollbar-hide pb-16">
             <EpisodesSection episodes={episodes} />
           </div>
         ) : (
