💄 Fix theme switch checkbox state and add button component for character location

--- a/src/components/ThemeSwitch.astro
+++ b/src/components/ThemeSwitch.astro
@@ -7,7 +7,7 @@ import Sun from "./Icons/Sun.astro";
   for="togleTheme"
   class="rounded-full flex justify-center items-center cursor-pointer bg-default-100 hover:bg-rickBlue transition-all fill-rickBlue hover:fill-default-900 w-9 h-9"
 >
-  <input type="checkbox" id="togleTheme" transition:persist hidden />
+  <input type="checkbox" id="togleTheme" transition:persist hidden checked />
   <Moon class="h-6 w-6 inline dark:hidden" />
   <Sun class="h-6 w-6 hidden dark:inline" />
 </label>
