--- a/src/components/ThemeSwitch.astro
+++ b/src/components/ThemeSwitch.astro
@@ -4,12 +4,13 @@ import Sun from "./Icons/Sun.astro";
 ---
 
 <label
+  transition:persist
   for="togleTheme"
   class="rounded-full flex justify-center items-center cursor-pointer bg-default-100 hover:bg-rickBlue transition-all fill-rickBlue hover:fill-default-900 w-9 h-9"
 >
   <input type="checkbox" id="togleTheme" transition:persist hidden checked />
-  <Moon class="h-6 w-6 inline dark:hidden" />
-  <Sun class="h-6 w-6 hidden dark:inline" />
+  <Moon class="h-6 w-6 inline dark:hidden" transition:persist />
+  <Sun class="h-6 w-6 hidden dark:inline" transition:persist />
 </label>
 
 <script is:inline>
@@ -36,6 +37,7 @@ import Sun from "./Icons/Sun.astro";
       })
     );
   }
+
   themeToggle.addEventListener("change", switchTheme, false);
   document.addEventListener("astro:after-swap", switchTheme);
 </script>
