--- a/src/pages/personajes/[id].astro
+++ b/src/pages/personajes/[id].astro
@@ -120,7 +120,7 @@ if (!Array.isArray(episodes)) {
       <hr class="my-5 text-foreground-100" />
       {
         episodes.length > 0 ? (
-          <div class=" max-h-[35rem] mask overflow-auto scrollbar-hide pb-16">
+          <div class="  overflow-auto scrollbar-hide pb-16">
             <EpisodesSection episodes={episodes} />
           </div>
         ) : (
