--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -44,7 +44,7 @@ const { title } = Astro.props;
         <ButtonAction textColor="blue" href="/favoritos">
           <Heart /> Mis favoritos
         </ButtonAction>
-        <ThemeSwitch />
+        <ThemeSwitch transition:persist />
       </nav>
     </header>
     <main class="flex-1">
