--- a/src/pages/personajes/[id].astro
+++ b/src/pages/personajes/[id].astro
@@ -47,7 +47,7 @@ if (!Array.isArray(episodes)) {
       class="w-full flex-col-reverse sm:flex-row gap-9 sm:gap-9 justify-center sm:items-center flex mx-auto bg-default-50 mt-12 rounded-2xl px-5 sm:px-12 py-8 border border-default-300"
     >
       <div class="flex-1">
-        <h1 class="text-3xl mb-2 font-bold">{character.name}</h1>
+        <h1 class="text-xl mb-2 font-bold">{character.name}</h1>
         <p class="font-bold text-md text-default-500">
           Estado: <span class="font-normal">{character.status}</span>
         </p>
