--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -47,7 +47,7 @@ const { title } = Astro.props;
         <ThemeSwitch transition:persist />
       </nav>
     </header>
-    <main class="flex-1">
+    <main class="flex-1 overflow-hidden">
       <slot />
     </main>
     <footer
