--- a/src/pages/episodios/[id].astro
+++ b/src/pages/episodios/[id].astro
@@ -49,6 +49,9 @@ const allEpisodes = await getEpisode({
 const prevEpisodes = allEpisodes?.slice(0, prev3EpisodesIds.length);
 const nextEpisodes = allEpisodes?.slice(prev3EpisodesIds.length);
 
+const lastEpisodeOfPrev = prevEpisodes[prevEpisodes.length - 1];
+const firstEpisodeOfNext = nextEpisodes[0];
+
 const charactersIds = episode?.characters.map((character) =>
   character.split("/").pop()
 );
@@ -61,9 +64,9 @@ if (!Array.isArray(characters)) {
 ---
 
 <Layout title={episode.name}>
-  <div class="sm:max-w-xl lg:max-w-5xl mx-auto h-full">
+  <div class="sm:max-w-xl lg:max-w-5xl mx-auto h-full px-3 sm:px-0">
     <div
-      class="relative mt-10 flex flex-col gap-4 justify-center items-center w-full h-[20rem] max-w-2xl mx-auto"
+      class="relative overflow-visible mt-10 flex flex-col gap-4 justify-center items-center w-full sm:h-[20rem] max-w-2xl mx-auto"
     >
       {
         prevEpisodes[0] && (
@@ -71,9 +74,10 @@ if (!Array.isArray(characters)) {
             id={prevEpisodes[0]?.id}
             name={prevEpisodes[0]?.name}
             url={`/episodios/${prevEpisodes[0]?.id}`}
-            className={`
+            className={` 
             scale-[0.6] rotate-6 hover:rotate-0 absolute hover:z-10 hover:scale-75 transition-all 
-            sm:top-8 sm:-left-[17rem] sm:hover:-left-[15rem]   
+            sm:top-8 sm:-left-[17rem] sm:hover:-left-[15rem]
+            translate-x-16   
             `}
           />
         )
@@ -88,6 +92,7 @@ if (!Array.isArray(characters)) {
             className={`
             scale-[0.6] rotate-0 absolute hover:z-10 hover:scale-75 transition-all 
             sm:top-1/2 sm:-translate-y-1/2 sm:-left-[17rem] sm:hover:-left-[15rem]   
+            translate-x-16 
             `}
           />
         )
@@ -102,18 +107,31 @@ if (!Array.isArray(characters)) {
             className={`
             scale-[0.6] -rotate-12 hover:-rotate-6 absolute hover:z-10 hover:scale-75 transition-all 
             sm:-bottom-3 sm:-translate-y-1/2 sm:-left-[16rem] sm:hover:-left-[15rem]   
-            `}
+            translate-x-16  `}
           />
         )
       }
 
       <img
         src="/images/r1s.png"
-        class="absolute -rotate-12 w-auto pointer-events-none
-        sm:-top-10 sm:-left-56 sm:h-[30rem]"
+        class="absolute sm:-rotate-12 w-auto pointer-events-none
+        sm:-top-10 sm:-left-56 sm:h-[30rem]
+        translate-x-10
+        sm:inline hidden"
         alt=""
       />
-      <h1 class="text-3xl mb-1 font-bold">Episodio #{episode?.id}</h1>
+
+      <img
+        src="/images/r2s.png"
+        class="absolute w-auto rotate-6 pointer-events-none
+        sm:-right-40 sm:-top-14 sm:h-[30rem]
+        sm:inline hidden"
+        alt=""
+      />
+
+      <h1 class="text-3xl z-10 mb-1 shadow-xl font-bold">
+        Episodio #{episode?.id}
+      </h1>
 
       <EpisodeCardCenter
         id={episode.id}
@@ -122,6 +140,47 @@ if (!Array.isArray(characters)) {
         episode={episode.episode}
         url={null}
       />
+      <div class="flex sm:hidden w-full max-w-72 gap-3">
+        <a
+          href={`${lastEpisodeOfPrev?.id || ""} `}
+          class={`w-full flex justify-center text-center gap-2 py-2 rounded-xl  bg-default-50  ${lastEpisodeOfPrev ? "text-success-300" : "text-default-300"} "}`}
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="w-6 h-6"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M15.75 19.5 8.25 12l7.5-7.5"></path>
+          </svg>
+
+          Anterior
+        </a>
+        <a
+          href={`${firstEpisodeOfNext?.id || ""} `}
+          class={`w-full flex justify-center text-center gap-2 py-2 rounded-xl  bg-default-50  ${firstEpisodeOfNext ? "text-success-300" : "text-default-300"} "}`}
+        >
+          Siguiente
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="w-6 h-6"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="m8.25 4.5 7.5 7.5-7.5 7.5"></path>
+          </svg>
+        </a>
+      </div>
 
       {
         nextEpisodes[0] && (
@@ -164,13 +223,6 @@ if (!Array.isArray(characters)) {
           />
         )
       }
-
-      <img
-        src="/images/r2s.png"
-        class="absolute w-auto rotate-6 pointer-events-none
-sm:-right-40 sm:-top-14 sm:h-[30rem]"
-        alt=""
-      />
     </div>
     <div class="flex justify-between items-center mt-32 -translate-y-">
       <h1
