💄 Update text-balance class to use dark mode color in 404.astro

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -17,7 +17,7 @@ import Layout from "@/layouts/Layout.astro";
     </div>
 
     <p
-      class="text-balance w-full max-w-96 text-sm text-default-300 overflow-hidden text-center mx-auto"
+      class="text-balance w-full max-w-96 text-sm text-default-500 dark:text-default-300 overflow-hidden text-center mx-auto"
     >
       La pagina que intentas acceder no existe o aun esta en desarrollo!
     </p>
