--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -3,10 +3,8 @@ import ButtonAction from "@/components/ButtonAction.astro";
 import Layout from "@/layouts/Layout.astro";
 ---
 
-<Layout title="Oops!">
-  <div
-    class="sm:max-w-xl lg:max-w-5xl mx-auto h-full flex flex-col gap-4 overflow-hidden"
-  >
+<Layout title="Oops!" limit>
+  <div class="w-full h-full flex flex-col gap-4 overflow-hidden">
     <div class="text-[10rem] leading-[14rem] font-bold w-full flex mx-auto">
       <div class="flex mx-auto justify-between max-w-80 w-full">
         4 <img
