--- a/src/pages/episodios/[id].astro
+++ b/src/pages/episodios/[id].astro
@@ -63,8 +63,8 @@ if (!Array.isArray(characters)) {
 }
 ---
 
-<Layout title={episode.name}>
-  <div class="sm:max-w-xl lg:max-w-5xl mx-auto h-full px-3 sm:px-0">
+<Layout title={episode.name} limit>
+  <div class="w-full h-full">
     <div
       class="relative overflow-visible mt-10 flex flex-col gap-4 justify-center items-center w-full sm:h-[20rem] max-w-2xl mx-auto"
     >
