--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,12 +7,13 @@ import ThemeSwitch from "@components/ThemeSwitch.astro";
 import "./global.css";
 import ArrowUp from "@/components/Icons/ArrowUp.astro";
 import DevIcon from "@/components/Icons/DevIcon.astro";
-
+import { limitClass } from "@/utils/constants/rickAndMorty";
 interface Props {
   title: string;
+  limit?: boolean;
 }
 
-const { title } = Astro.props;
+const { title, limit } = Astro.props;
 ---
 
 <!doctype html>
@@ -32,10 +33,10 @@ const { title } = Astro.props;
   </head>
   <body
     id="home"
-    class="transition-colors duration-300 bg-background min-h-dvh flex flex-col"
+    class={`transition-colors duration-300 bg-background min-h-dvh flex flex-col ${limit ? limitClass : ""}`}
   >
     <header
-      class="sm:max-w-xl lg:max-w-5xl mx-auto h-36 w-full flex sm:flex-row flex-col sm:items-end sm:justify-between justify-end gap-6 mt-9 sm:mt-0 sm:gap-0 items-center pb-4"
+      class={`h-36 w-full flex sm:flex-row flex-col sm:items-end sm:justify-between justify-end gap-6 mt-9 sm:mt-0 sm:gap-0 items-center pb-4  ${limitClass} `}
     >
       <a href="/">
         <Logo class="h-16 sm:h-12 w-auto fill-rickBlue" />
@@ -47,12 +48,12 @@ const { title } = Astro.props;
         <ThemeSwitch transition:persist />
       </nav>
     </header>
-    <main class="flex-1 overflow-hidden">
+    <main class="flex-1">
       <slot />
     </main>
     <footer
       transition:name="footer"
-      class="sm:max-w-xl px-2 w-full py-12 lg:max-w-5xl gap-2 flex flex-col text-default-400 mx-auto"
+      class={` ${limitClass}  w-full py-12 gap-2 flex flex-col text-default-400 mx-auto`}
     >
       <div class="flex justify-between items-center">
         <Logo class="h-12 w-auto fill-rickBlue" />
