✅ Update import paths for components in various files

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,5 +1,5 @@
 ---
-import ButtonAction from "@/components/ButtonAction.astro";
+import ButtonAction from "@components/ButtonAction.astro";
 import Layout from "@/layouts/Layout.astro";
 ---
 
