--- a/src/pages/episodios/[id].astro
+++ b/src/pages/episodios/[id].astro
@@ -1,10 +1,10 @@
 ---
 import type { GetStaticPaths } from "astro";
-import ButtonAction from "@/components/ButtonAction.astro";
-import { CharactersSection } from "@/components/CharactersSection";
-import EpisodeCardCenter from "@/components/EpisodeCardCenter.astro";
-import EpisodeCardFloat from "@/components/EpisodeCardFloat.astro";
-import MoreIcon from "@/components/Icons/MoreIcon.astro";
+import ButtonAction from "@components/ButtonAction.astro";
+import { CharactersSection } from "@components/CharactersSection";
+import EpisodeCardCenter from "@components/EpisodeCardCenter.astro";
+import EpisodeCardFloat from "@components/EpisodeCardFloat.astro";
+import MoreIcon from "@components/Icons/MoreIcon.astro";
 import Layout from "@/layouts/Layout.astro";
 import {
   getCharacter,
