--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
-import { HomeSearch } from "@/components/HomeSearch";
+import { HomeSearch } from "@components/HomeSearch";
 import Layout from "../layouts/Layout.astro";
-import HomeSection from "@/components/HomeSection.astro";
+import HomeSection from "@components/HomeSection.astro";
 import { search } from "@/utils/services/rickAndMorty";
 
 const { searchedCharacters, searchedEpisodes, searchedLocations } =
