--- a/src/pages/personajes/[id].astro
+++ b/src/pages/personajes/[id].astro
@@ -1,10 +1,10 @@
 ---
-import ButtonAction from "@/components/ButtonAction.astro";
-import { ButtonCharacter } from "@/components/ButtonCharacter";
-import { EpisodesSection } from "@/components/EpisodesSection";
-import Galaxia from "@/components/Icons/Galaxia.astro";
-import MaleIcon from "@/components/Icons/MaleIcon.astro";
-import MoreIcon from "@/components/Icons/MoreIcon.astro";
+import ButtonAction from "@components/ButtonAction.astro";
+import { ButtonCharacter } from "@components/ButtonCharacter";
+import { EpisodesSection } from "@components/EpisodesSection";
+import Galaxia from "@components/Icons/Galaxia.astro";
+import MaleIcon from "@components/Icons/MaleIcon.astro";
+import MoreIcon from "@components/Icons/MoreIcon.astro";
 import Layout from "@/layouts/Layout.astro";
 import { getEpisode } from "@/utils/services/rickAndMorty";
 import { getCharacter } from "@/utils/services/rickAndMorty";
