✅ Add @formkit/tempo dependency and update footer link in Layout.astro

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -72,9 +72,11 @@ const { title, limit } = Astro.props;
         <p>© 2024 Rick and Morty</p>
         <p class="flex gap-2">
           Desarrollado por
-          <span class="text-rickBlue flex justify-center items-center gap-2"
+          <a
+            href="https://fabianbarua.vercel.app/"
+            class="text-rickBlue flex justify-center items-center gap-2"
             >Fabian Barua <DevIcon />
-          </span>
+          </a>
         </p>
       </div>
     </footer>
