--- a/src/components/FabianBarua.astro
+++ b/src/components/FabianBarua.astro
@@ -1,17 +1,28 @@
 ---
 const technologies = ["Astro", "React", "TailwindCSS"];
+import { format } from "@formkit/tempo";
+
+const l = "es";
+const t = new Date();
+
+const deployData = format(t, "MMMM D, YYYY", l);
 ---
 
 <article
   class="font-mono py-7 border border-default-200 mt-8 relative flex p-2 rounded-2xl bg-default-100/50 shadow-xl"
 >
-  <p class="text-sm w-full text-end absolute top-2 right-3 text-default-400">
-    Abril 16, 2024
+  <p
+    class="text-sm w-full text-end absolute top-2 right-3 text-default-400 capitalize"
+  >
+    {deployData}
   </p>
 
-  <a class="relative my-auto size-16 min-h-16 flex justify-center" href="#">
+  <a
+    class="relative my-auto size-16 min-h-16 flex justify-center"
+    href="https://fabianbarua.vercel.app/"
+  >
     <img
-      class="hover:saturate-150 border-2 border-[#fff0] hover:border-rickBlue/80 transition-all rounded-full w-full h-full"
+      class="hover:saturate-150 border-2 border-[#fff0] hover:border-rickBlue transition-all rounded-full w-full h-full"
       src="/avatar.png"
     />
   </a>
@@ -29,9 +40,3 @@ const technologies = ["Astro", "React", "TailwindCSS"];
     </div>
   </header>
 </article>
-
-<style>
-  .half-circle {
-    stroke-linecap: round;
-  }
-</style>
