🚚  Update import paths for components

--- a/src/components/HomeSection.astro
+++ b/src/components/HomeSection.astro
@@ -1,6 +1,6 @@
 ---
 import FabianBarua from "./FabianBarua.astro";
-import { ImageHome } from "./ImageHome";
+import { ImageHome } from "@components/ImageHome";
 import { limitClass } from "@/utils/constants/rickAndMorty";
 ---
 
