--- a/src/components/ThemeSwitch.astro
+++ b/src/components/ThemeSwitch.astro
@@ -1,6 +1,6 @@
 ---
-import Moon from "./Icons/Moon.astro";
-import Sun from "./Icons/Sun.astro";
+import Moon from "@icons/Moon.astro";
+import Sun from "@icons/Sun.astro";
 ---
 
 <label
