--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,8 +1,8 @@
 ---
 import ViewTransitions from "astro/components/ViewTransitions.astro";
 import ButtonAction from "../components/ButtonAction.astro";
-import Heart from "../components/Icons/Heart.astro";
-import Logo from "../components/Icons/Logo.astro";
+import Heart from "@icons/Heart.astro";
+import Logo from "@icons/Logo.astro";
 import ThemeSwitch from "@components/ThemeSwitch.astro";
 import "./global.css";
 import ArrowUp from "@components/Icons/ArrowUp.astro";
